--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 
   <header>
     <!-- Replace logo.png with your actual logo file -->
-    <img src="logo.png" alt="School Logo">
+    <img src="Logo.png" alt="School Logo">
     <h1>BALILIHAN CENTRAL ELEMENTARY SCHOOL</h1>
   </header>
 
   <main>
     <!-- Replace video.mp4 with your actual video file -->
     <video controls>
-      <source src="video.mp4" type="video/mp4">
+      <source src="SELG.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 
