--- a/ONE.html
+++ b/ONE.html
@@ -89,7 +89,7 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="School Logo"> <!-- Replace 'logo.png' with the actual logo file -->
+    <img src="Logo.png" alt="School Logo"> <!-- Replace 'Logo.png' with the actual logo file -->
     <h1>SUPREME ELEMENTARY LEARNER GOVERNMENT</h1>
     <p>BALILIHAN CENTRAL ELEMENTARY SCHOOL</p>
     <p>School ID: 117995</p>
@@ -157,7 +157,7 @@
         
         <!-- Grade 5 Representative -->
         <div class="position-item">
-            <img src="i.png" alt="Grade 5 Representative">
+            <img src="i-2.png" alt="Grade 5 Representative">
             <h3>Grade 5 Representative</h3>
             <p>NINA ELISHA F.CEMPRON</p>
         </div>
