--- a/candidates.html
+++ b/candidates.html
@@ -100,8 +100,8 @@
 <div class="container">
     <h2 style="text-align: center;">Candidates Dashboard</h2>
     <div class="buttons">
-        <button class="btn" onclick="location.href='ONE.html'">ONE Partylist</button>
-        <button class="btn" onclick="location.href='VOICE.html'">VOICE Partylist</button>
+        <button class="btn" onclick="location.href='ONE.html'">ONE Party</button>
+        <button class="btn" onclick="location.href='VOICE.html'">VOICE Party</button>
         <button class="btn" onclick="location.href='independent.html'">Independent</button>
     </div>
 </div>
