Update heading and add Public Information Officer section

--- a/independent.html
+++ b/independent.html
@@ -96,9 +96,16 @@
 </header>
 
 <div class="container">
-    <h2 style="text-align: center;">INDEPENDENT Partylist Candidates</h2>
+    <h2 style="text-align: center;">INDEPENDENT Party Candidates</h2>
     
     <div class="position-list">
+        <!-- PUBLIC INFORMATION OFFICER -->
+        <div class="position-item">
+            <img src="13.png" alt="Public Information Officer">
+            <h3>Public Information Officer</h3>
+            <p>FAITH R. YAMYAMIN</p>
+        </div>
+        
         <!-- PROTOCOL OFFICER -->
         <div class="position-item">
             <img src="24.png" alt="Protocol Officer">
