--- a/VOICE.html
+++ b/VOICE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VOICE Partylist - Candidates</title>
+    <title>VOICE Party - Candidates</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -96,7 +96,7 @@
 </header>
 
 <div class="container">
-    <h2 style="text-align: center;">VOICE Partylist Candidates</h2>
+    <h2 style="text-align: center;">VOICE Party Candidates</h2>
     
     <div class="position-list">
         <!-- President -->
