--- a/dashboard3.html
+++ b/dashboard3.html
@@ -75,11 +75,7 @@
            Voting System
         </a>
 
-        <a href="https://docs.google.com/forms/d/1B8EXcTFn48i4jwSPQmhLbt0cnE6YC9jcbw3k3ppE3vI/edit#responses" 
-           class="btn" 
-           target="_blank">
-           Official Results
-        </a>
+        <a href="results.html" class="btn">Official Results</a>
     </div>
 </div>
 
