--- a/results.html
+++ b/results.html
@@ -91,7 +91,7 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="School Logo">
+    <img src="Logo.png" alt="School Logo">
     <h1>SUPREME ELEMENTARY LEARNER GOVERNMENT</h1>
     <p>BALILIHAN CENTRAL ELEMENTARY SCHOOL</p>
     <p>School ID: 117995</p>
